@@ -1,3 +1,9 @@
+2015-02-27  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/65048
+	* gcc.dg/tree-ssa/ssa-dom-thread-9.c: Add -std=gnu89 to dg-options.
+	(foo): Use K&R style definition.
+
 2015-02-27  Vladimir Makarov  <vmakarov@redhat.com>
 
 	PR target/65032
